Lab3/src/parser/CmmParser.java
// Generated from D:/OneDrive - Universidad de Oviedo/Documentos/Universidad/España_3-4/DLP/Programming-Language-Design/Lab3/src/parser\Cmm.g4 by ANTLR 4.8
package parser;

    import ast.*;
    import ast.types.*;
    import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, INT_CONSTANT=37, ID=38, 
		REAL_CONSTANT=39, CHAR_CONSTANT=40, WHITE_SPACES=41, ONE_LINE_COMMENT=42, 
		MULTIPLE_LINE_COMMENT=43;
	public static final int
		RULE_program = 0, RULE_main = 1, RULE_definition = 2, RULE_function_definition = 3, 
		RULE_variable_definition = 4, RULE_function_body = 5, RULE_parameter = 6, 
		RULE_type = 7, RULE_record_field = 8, RULE_built_in_type = 9, RULE_statement = 10, 
		RULE_expressions = 11, RULE_function_invocation = 12, RULE_arguments = 13, 
		RULE_block = 14, RULE_expression = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "main", "definition", "function_definition", "variable_definition", 
			"function_body", "parameter", "type", "record_field", "built_in_type", 
			"statement", "expressions", "function_invocation", "arguments", "block", 
			"expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'void'", "'main'", "'('", "')'", "'{'", "'}'", "','", "';'", "'['", 
			"']'", "'struct'", "'int'", "'double'", "'char'", "'while'", "'if'", 
			"'else'", "'='", "'read'", "'write'", "'return'", "'.'", "'-'", "'*'", 
			"'/'", "'%'", "'+'", "'>'", "'>='", "'<'", "'<='", "'!='", "'=='", "'!'", 
			"'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "INT_CONSTANT", "ID", "REAL_CONSTANT", "CHAR_CONSTANT", "WHITE_SPACES", 
			"ONE_LINE_COMMENT", "MULTIPLE_LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Definition> defs = new ArrayList<Definition>();
		public DefinitionContext d;
		public MainContext m;
		public TerminalNode EOF() { return getToken(CmmParser.EOF, 0); }
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(32);
					((ProgramContext)_localctx).d = definition();
					 for(Definition def :((ProgramContext)_localctx).d.ast) _localctx.defs.add(def); 
					}
					} 
				}
				setState(39);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(40);
			((ProgramContext)_localctx).m = main();

			            _localctx.defs.add(((ProgramContext)_localctx).m.ast);
			            ((ProgramContext)_localctx).ast =  new Program(1,1, _localctx.defs); 
			setState(42);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public Token t;
		public Token n;
		public Function_bodyContext b;
		public Function_bodyContext function_body() {
			return getRuleContext(Function_bodyContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			((MainContext)_localctx).t = match(T__0);
			setState(45);
			((MainContext)_localctx).n = match(T__1);
			setState(46);
			match(T__2);
			setState(47);
			match(T__3);
			setState(48);
			match(T__4);
			setState(49);
			((MainContext)_localctx).b = function_body();
			setState(50);
			match(T__5);
			   FunctionType ft = new FunctionType(((MainContext)_localctx).n.getLine(), ((MainContext)_localctx).n.getCharPositionInLine()+1, new VoidType(((MainContext)_localctx).t.getLine(), ((MainContext)_localctx).t.getCharPositionInLine()), new ArrayList<VarDefinition>());
			            ((MainContext)_localctx).ast =  new FunctionDefinition(((MainContext)_localctx).n.getLine(), ((MainContext)_localctx).n.getCharPositionInLine()+1, (((MainContext)_localctx).n!=null?((MainContext)_localctx).n.getText():null), ft, ((MainContext)_localctx).b.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public Variable_definitionContext v;
		public Function_definitionContext f;
		public Variable_definitionContext variable_definition() {
			return getRuleContext(Variable_definitionContext.class,0);
		}
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definition);
		try {
			setState(59);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				((DefinitionContext)_localctx).v = variable_definition();
				 for(VarDefinition d: ((DefinitionContext)_localctx).v.ast) _localctx.ast.add(d); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				((DefinitionContext)_localctx).f = function_definition();
				 _localctx.ast.add(((DefinitionContext)_localctx).f.ast); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_definitionContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public TypeContext t;
		public Token n;
		public ParameterContext p;
		public Function_bodyContext b;
		public Token t2;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public Function_bodyContext function_body() {
			return getRuleContext(Function_bodyContext.class,0);
		}
		public Function_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_definition; }
	}

	public final Function_definitionContext function_definition() throws RecognitionException {
		Function_definitionContext _localctx = new Function_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_definition);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
			case T__11:
			case T__12:
			case T__13:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				((Function_definitionContext)_localctx).t = type(0);
				setState(62);
				((Function_definitionContext)_localctx).n = match(ID);
				setState(63);
				match(T__2);
				setState(64);
				((Function_definitionContext)_localctx).p = parameter();
				setState(65);
				match(T__3);
				setState(66);
				match(T__4);
				setState(67);
				((Function_definitionContext)_localctx).b = function_body();
				setState(68);
				match(T__5);
				   FunctionType ft = new FunctionType(((Function_definitionContext)_localctx).n.getLine(), ((Function_definitionContext)_localctx).n.getCharPositionInLine()+1, ((Function_definitionContext)_localctx).t.ast, ((Function_definitionContext)_localctx).p.ast);
				                ((Function_definitionContext)_localctx).ast =  new FunctionDefinition(((Function_definitionContext)_localctx).n.getLine(), ((Function_definitionContext)_localctx).n.getCharPositionInLine()+1, (((Function_definitionContext)_localctx).n!=null?((Function_definitionContext)_localctx).n.getText():null), ft, ((Function_definitionContext)_localctx).b.ast); 
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				((Function_definitionContext)_localctx).t2 = match(T__0);
				setState(72);
				((Function_definitionContext)_localctx).n = match(ID);
				setState(73);
				match(T__2);
				setState(74);
				((Function_definitionContext)_localctx).p = parameter();
				setState(75);
				match(T__3);
				setState(76);
				match(T__4);
				setState(77);
				((Function_definitionContext)_localctx).b = function_body();
				setState(78);
				match(T__5);
				   FunctionType ft = new FunctionType(((Function_definitionContext)_localctx).n.getLine(), ((Function_definitionContext)_localctx).n.getCharPositionInLine()+1, new VoidType(((Function_definitionContext)_localctx).t2.getLine(), ((Function_definitionContext)_localctx).t2.getCharPositionInLine()), ((Function_definitionContext)_localctx).p.ast);
				                    ((Function_definitionContext)_localctx).ast =  new FunctionDefinition(((Function_definitionContext)_localctx).n.getLine(), ((Function_definitionContext)_localctx).n.getCharPositionInLine()+1, (((Function_definitionContext)_localctx).n!=null?((Function_definitionContext)_localctx).n.getText():null), ft, ((Function_definitionContext)_localctx).b.ast); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_definitionContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public TypeContext t;
		public Token i1;
		public Token i2;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public Variable_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_definition; }
	}

	public final Variable_definitionContext variable_definition() throws RecognitionException {
		Variable_definitionContext _localctx = new Variable_definitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variable_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			((Variable_definitionContext)_localctx).t = type(0);
			setState(84);
			((Variable_definitionContext)_localctx).i1 = match(ID);
			 _localctx.ast.add(new VarDefinition(((Variable_definitionContext)_localctx).i1.getLine(), ((Variable_definitionContext)_localctx).i1.getCharPositionInLine()+1, ((Variable_definitionContext)_localctx).t.ast, (((Variable_definitionContext)_localctx).i1!=null?((Variable_definitionContext)_localctx).i1.getText():null))); 
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(86);
				match(T__6);
				setState(87);
				((Variable_definitionContext)_localctx).i2 = match(ID);
				 _localctx.ast.add(new VarDefinition(((Variable_definitionContext)_localctx).i2.getLine(), ((Variable_definitionContext)_localctx).i2.getCharPositionInLine()+1, ((Variable_definitionContext)_localctx).t.ast, (((Variable_definitionContext)_localctx).i2!=null?((Variable_definitionContext)_localctx).i2.getText():null))); 
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_bodyContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<Statement>();
		public Variable_definitionContext v;
		public StatementContext s;
		public List<Variable_definitionContext> variable_definition() {
			return getRuleContexts(Variable_definitionContext.class);
		}
		public Variable_definitionContext variable_definition(int i) {
			return getRuleContext(Variable_definitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Function_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_body; }
	}

	public final Function_bodyContext function_body() throws RecognitionException {
		Function_bodyContext _localctx = new Function_bodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13))) != 0)) {
				{
				{
				setState(96);
				((Function_bodyContext)_localctx).v = variable_definition();
				 for(VarDefinition vd: ((Function_bodyContext)_localctx).v.ast) _localctx.ast.add(vd); 
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__8) | (1L << T__14) | (1L << T__15) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__22) | (1L << T__33) | (1L << INT_CONSTANT) | (1L << ID) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT))) != 0)) {
				{
				{
				setState(104);
				((Function_bodyContext)_localctx).s = statement();
				 for(Statement st: ((Function_bodyContext)_localctx).s.ast) _localctx.ast.add(st); 
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public Built_in_typeContext b1;
		public Token i1;
		public Built_in_typeContext b2;
		public Token i2;
		public List<Built_in_typeContext> built_in_type() {
			return getRuleContexts(Built_in_typeContext.class);
		}
		public Built_in_typeContext built_in_type(int i) {
			return getRuleContext(Built_in_typeContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_parameter);
		int _la;
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
			case T__12:
			case T__13:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				((ParameterContext)_localctx).b1 = built_in_type();
				setState(113);
				((ParameterContext)_localctx).i1 = match(ID);
				 _localctx.ast.add(new VarDefinition(((ParameterContext)_localctx).b1.ast.getLine(), ((ParameterContext)_localctx).b1.ast.getColumn(), ((ParameterContext)_localctx).b1.ast, (((ParameterContext)_localctx).i1!=null?((ParameterContext)_localctx).i1.getText():null))); 
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6) {
					{
					{
					setState(115);
					match(T__6);
					setState(116);
					((ParameterContext)_localctx).b2 = built_in_type();
					setState(117);
					((ParameterContext)_localctx).i2 = match(ID);
					 _localctx.ast.add(new VarDefinition(((ParameterContext)_localctx).b2.ast.getLine(), ((ParameterContext)_localctx).b2.ast.getColumn(), ((ParameterContext)_localctx).b2.ast, (((ParameterContext)_localctx).i2!=null?((ParameterContext)_localctx).i2.getText():null))); 
					}
					}
					setState(124);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type ast;
		public List<RecordField> rfs = new ArrayList<RecordField>();
		public TypeContext t;
		public Built_in_typeContext bt;
		public Token n;
		public Record_fieldContext rf;
		public Token s;
		public Built_in_typeContext built_in_type() {
			return getRuleContext(Built_in_typeContext.class,0);
		}
		public List<Record_fieldContext> record_field() {
			return getRuleContexts(Record_fieldContext.class);
		}
		public Record_fieldContext record_field(int i) {
			return getRuleContext(Record_fieldContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> INT_CONSTANT() { return getTokens(CmmParser.INT_CONSTANT); }
		public TerminalNode INT_CONSTANT(int i) {
			return getToken(CmmParser.INT_CONSTANT, i);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}
